# recorder

./: .gitignore  Cargo.toml  README.md
src/: finger.rs  lib.rs  notation.rs  tone.rs
tests/: tone_convert_test.rs  告白之夜.txt  告白之夜2.txt  孟姜女.txt  深海少女.txt
